# Ex3-OOP2

./: CMakeLists.txt  README.md  README.txt
include/: Add.h  CMakeLists.txt  Comp.h  Function.h  FunctionCalculator.h  Ln.h  Log.h  Mul.h  MyException.h  Poly.h  Sin.h  Utilities.h
resources/: CMakeLists.txt  file.txt  text.txt
src/: Add.cpp  CMakeLists.txt  Comp.cpp  FunctionCalculator.cpp  Sin.cpp  main.cpp
